// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketFields/> should render active ticket fields 1`] = `
<div
  class="full-width overflow-auto pageContainer"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Ticket Fields
      </h1>
      <div>
        <div
          class="headerContainer"
        >
          <div
            class="component mr-2"
          >
            <div
              class="wrapper input"
            >
              <span
                class="prefix"
              >
                <i
                  class="material-icons icon"
                >
                  search
                </i>
              </span>
              <input
                class="input"
                id="custom-fields-search"
                name="custom-fields-search"
                placeholder="Search ticket fields..."
                type="text"
                value=""
              />
            </div>
          </div>
          <a
            to="/app/settings/ticket-fields/add"
          >
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Create Field
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="ticket-fields-listing-educational-material"
    />
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/active"
      >
        Active
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/archived"
      >
        Archived
      </a>
    </nav>
  </div>
  <div
    class="p-0 container-fluid"
  >
    <div
      data-testid="ticket-fields-list"
    />
  </div>
</div>
`;

exports[`<TicketFields/> should render archived ticket fields 1`] = `
<div
  class="full-width overflow-auto pageContainer"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Ticket Fields
      </h1>
      <div>
        <div
          class="headerContainer"
        >
          <div
            class="component mr-2"
          >
            <div
              class="wrapper input"
            >
              <span
                class="prefix"
              >
                <i
                  class="material-icons icon"
                >
                  search
                </i>
              </span>
              <input
                class="input"
                id="custom-fields-search"
                name="custom-fields-search"
                placeholder="Search ticket fields..."
                type="text"
                value=""
              />
            </div>
          </div>
          <a
            to="/app/settings/ticket-fields/add"
          >
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Create Field
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="ticket-fields-listing-educational-material"
    />
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/active"
      >
        Active
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/archived"
      >
        Archived
      </a>
    </nav>
  </div>
  <div
    class="p-0 container-fluid"
  >
    <div
      data-testid="ticket-fields-list"
    />
  </div>
</div>
`;

exports[`<TicketFields/> should render get started 1`] = `
<div
  class="full-width overflow-auto pageContainer"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Ticket Fields
      </h1>
      <div>
        <div
          class="headerContainer"
        />
      </div>
    </div>
    
  </div>
  <div
    class="emptyViewContainer"
  >
    <h2
      class="emptyViewContainerHeader"
    >
      Get started with Ticket Fields
    </h2>
    <p
      class="emptyViewContainerText"
    >
      Create custom fields to track and report common ticket categories.
    </p>
    <div
      data-candu-id="ticket-fields-landing-educational-material"
    />
    <a
      to="/app/settings/ticket-fields/add"
    >
      <button
        class="wrapper fill primary medium"
        type="button"
      >
        Create Field
      </button>
    </a>
  </div>
</div>
`;

exports[`<TicketFields/> should render no active ticket fields 1`] = `
<div
  class="full-width overflow-auto pageContainer"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Ticket Fields
      </h1>
      <div>
        <div
          class="headerContainer"
        >
          <div
            class="component mr-2"
          >
            <div
              class="wrapper input"
            >
              <span
                class="prefix"
              >
                <i
                  class="material-icons icon"
                >
                  search
                </i>
              </span>
              <input
                class="input"
                id="custom-fields-search"
                name="custom-fields-search"
                placeholder="Search ticket fields..."
                type="text"
                value=""
              />
            </div>
          </div>
          <a
            to="/app/settings/ticket-fields/add"
          >
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Create Field
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="ticket-fields-listing-educational-material"
    />
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/active"
      >
        Active
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/archived"
      >
        Archived
      </a>
    </nav>
  </div>
  <div
    class="p-0 container-fluid"
  >
    <div
      class="emptyListTextWrapper"
    >
      You don't have any
       
      active
       
      ticket fields at the moment
    </div>
  </div>
</div>
`;

exports[`<TicketFields/> should render no archived ticket fields 1`] = `
<div
  class="full-width overflow-auto pageContainer"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Ticket Fields
      </h1>
      <div>
        <div
          class="headerContainer"
        >
          <div
            class="component mr-2"
          >
            <div
              class="wrapper input"
            >
              <span
                class="prefix"
              >
                <i
                  class="material-icons icon"
                >
                  search
                </i>
              </span>
              <input
                class="input"
                id="custom-fields-search"
                name="custom-fields-search"
                placeholder="Search ticket fields..."
                type="text"
                value=""
              />
            </div>
          </div>
          <a
            to="/app/settings/ticket-fields/add"
          >
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Create Field
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="ticket-fields-listing-educational-material"
    />
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/active"
      >
        Active
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/archived"
      >
        Archived
      </a>
    </nav>
  </div>
  <div
    class="p-0 container-fluid"
  >
    <div
      class="emptyListTextWrapper"
    >
      You don't have any
       
      archived
       
      ticket fields at the moment
    </div>
  </div>
</div>
`;

exports[`<TicketFields/> should render no results found 1`] = `
<div
  class="full-width overflow-auto pageContainer"
>
  <div
    class="pageHeaderContainer"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Ticket Fields
      </h1>
      <div>
        <div
          class="headerContainer"
        >
          <div
            class="component mr-2"
          >
            <div
              class="wrapper isFocused input"
            >
              <span
                class="prefix"
              >
                <i
                  class="material-icons icon"
                >
                  search
                </i>
              </span>
              <input
                class="input"
                id="custom-fields-search"
                name="custom-fields-search"
                placeholder="Search ticket fields..."
                type="text"
                value="foo"
              />
            </div>
          </div>
          <a
            to="/app/settings/ticket-fields/add"
          >
            <button
              class="wrapper fill primary medium"
              type="button"
            >
              Create Field
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      data-candu-id="ticket-fields-listing-educational-material"
    />
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/active"
      >
        Active
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/ticket-fields/archived"
      >
        Archived
      </a>
    </nav>
  </div>
  <div
    class="p-0 container-fluid"
  >
    <div
      class="emptyListTextWrapper"
    >
      No results found.
    </div>
  </div>
</div>
`;
